--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A simple Express server with MongoDB",
     "main": "server.js",
     "scripts": {
-        "echo": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
-    },
+		"start": "node server.js",
+		"heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+	},	
     "author": "Your Name",
     "license": "ISC",
     "dependencies": {
