--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "A simple Express server with MongoDB",
+    "description": "",
     "main": "server.js",
     "scripts": {
-        "echo": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
-    },
-    "author": "Your Name",
+		"start": "node server.js",
+		"heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+	},	
+    "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
