--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,51 @@
 {
-	"name": "frontend",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-	  "@testing-library/jest-dom": "^5.17.0",
-	  "@testing-library/react": "^13.4.0",
-	  "@testing-library/user-event": "^13.5.0",
-	  "dotenv": "^16.4.5",
-	  "react": "^18.2.0",
-	  "react-dom": "^18.2.0",
-	  "react-router-dom": "^6.22.1",
-	  "react-scripts": "^5.0.1",
-	  "web-vitals": "^2.1.4"
-	},
-	"scripts": {
-	  "start": "react-scripts start",
-	  "build": "react-scripts build",
-	  "test": "react-scripts test",
-	  "eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-	  "extends": [
-		"react-app",
-		"react-app/jest"
-	  ]
-	},
-	"browserslist": {
-	  "production": [
-		">0.2%",
-		"not dead",
-		"not op_mini all"
-	  ],
-	  "development": [
-		"last 1 chrome version",
-		"last 1 firefox version",
-		"last 1 safari version"
-	  ]
-	}
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@radix-ui/react-form": "^0.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@react-three/drei": "^9.99.6",
+    "@react-three/fiber": "^8.15.19",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.27.2",
+    "react-router-dom": "^6.22.2",
+    "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.162.0",
+    "topojson-client": "^3.1.0",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  
+}
