--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.3",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^6.4.0",
-        "mongoose": "^5.13.22"
+        "mongoose": "^5.13.22",
+		"multer": "^1.4.5-lts.1"
     }
 }
