--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
+        "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^6.4.0",
         "mongoose": "^5.13.22",
-		"multer": "^1.4.5-lts.1"
+        "multer": "^1.4.4"
     }
 }
