--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "exif-parser": "^0.1.12",
         "express": "^4.18.3",
         "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^6.4.0",
-        "multer": "^1.4.4"
+        "multer": "^1.4.4",
+        "multer-gridfs-storage": "^5.0.2"
     }
 }
