--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "bluebird": "^3.7.2",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -18,7 +19,9 @@
         "express": "^4.18.3",
         "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
+        "method-override": "^3.0.0",
         "mongodb": "^6.4.0",
+        "mongoose": "^8.2.4",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2"
     }
