--- a/package.json
+++ b/package.json
@@ -7,21 +7,14 @@
         "start": "node server.js",
         "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
     },
-    "keywords": [
-        "node",
-        "upload",
-        "multiple",
-        "files",
-        "images",
-        "mongodb"
-    ],
-    "author": "",
+    "author": "David Medina",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "exif": "^0.6.0",
         "exif-parser": "^0.1.12",
         "express": "^4.18.3",
         "gridfs-stream": "^1.1.1",
