--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "David Medina",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.1592.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
@@ -17,10 +18,10 @@
         "exif": "^0.6.0",
         "exif-parser": "^0.1.12",
         "express": "^4.18.3",
-        "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^6.4.0",
         "multer": "^1.4.4",
-        "multer-gridfs-storage": "^5.0.2"
+        "multer-s3": "^3.0.1",
+        "sharp": "^0.33.3"
     }
 }
