--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "David Medina",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.550.0",
         "aws-sdk": "^2.1592.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
