--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-s3": "^3.550.0",
-        "aws-sdk": "^2.1592.0",
+        "@aws-sdk/s3-request-presigner": "^3.550.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "exif": "^0.6.0",
-        "exif-parser": "^0.1.12",
         "express": "^4.18.3",
-        "jsonwebtoken": "^8.5.1",
         "mongodb": "^6.4.0",
         "multer": "^1.4.4",
-        "multer-s3": "^3.0.1",
         "sharp": "^0.33.3"
     }
 }
