--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
         "start": "node server.js",
         "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
     },
-    "author": "",
+    "author": "David Medina",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.550.0",
+        "@aws-sdk/s3-request-presigner": "^3.550.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.4.0",
-        "mongoose": "^5.13.22"
+        "mongoose": "^8.3.0",
+        "multer": "^1.4.4",
+        "sharp": "^0.33.3"
     }
 }
