--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "mongodb": "^6.4.0",
         "mongoose": "^8.3.0",
         "multer": "^1.4.4",
-        "sharp": "^0.33.3"
+        "nodemailer": "^6.9.13",
+        "sharp": "^0.33.3",
+        "uuid": "^9.0.1"
     }
 }
