--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.550.0",
         "@aws-sdk/s3-request-presigner": "^3.550.0",
+        "axios": "^1.6.8",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "exif-parser": "^0.1.12",
         "express": "^4.18.3",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.4.0",
