--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+        "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+        "test": "jest"
     },
+    "jest": {
+      "testEnvironment": "node"
+    }
     "author": "David Medina",
     "license": "ISC",
     "dependencies": {
