Updated version of website

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-three/drei": "^9.99.6",
@@ -23,6 +24,8 @@
     "react-globe.gl": "^2.27.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-uid": "^2.3.3",
+    "react-virtualized": "^9.22.5",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.1",
     "tailwind-merge": "^2.2.1",
