--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+        "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+        "test": "jest"
     },
-    "author": "",
+    "author": "David Medina",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.550.0",
+        "@aws-sdk/s3-request-presigner": "^3.550.0",
+        "axios": "^1.6.8",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "exif-parser": "^0.1.12",
         "express": "^4.18.3",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.4.0",
-        "mongoose": "^5.13.22"
+        "mongoose": "^8.3.0",
+        "multer": "^1.4.4",
+        "nodemailer": "^6.9.13",
+        "sharp": "^0.33.3",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.24.4",
+        "@babel/preset-react": "^7.24.1",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "supertest": "^6.3.4"
     }
 }
